# TrillionPass

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
dependencies/include/nlohmann/: json.hpp
include/: Data.hpp  Encrypter.hpp  Finder.hpp  GenPassword.hpp  MasterPassword.hpp  Recorder.hpp  Structure.hpp  pch.hpp
src/: Data.cpp  Encrypter.cpp  Finder.cpp  GenPassword.cpp  MasterPassword.cpp  Recorder.cpp  main.cpp
